# sorcer

./: .gitmodules  1.mana  1.txn  CMakeLists.txt  sorcer.c  sorcer.h  sorcer_a.h  sorcer_arith.c  sorcer_arith.h  sorcer_bi_oprs.c  sorcer_mana.c  sorcer_mana.h  sorcer_steps.c  sorcer_txn.c  sorcer_txn.h  sorcer_typeflag.h  sorcer_utils.c  sorcer_utils.h
imp/argparse/: argparse.c
shell/: main.c
sorcer/: sorcer.c  sorcer.h  sorcer_a.h  sorcer_array.c  sorcer_prim.c  sorcer_utils.c  sorcer_utils.h
test/: main.c
tests/: main.c
